# RadeOS

./: .gitignore  Cargo.toml  Makefile  README.md  build.sh  clean.sh  iso.sh  launch.sh
kernel/: lib.rs  logging.rs  multiboot.rs
kernel/arch/amd64/: boot.s  multiboot.s
kernel/arch/x86_64/: boot.s  gdt.s.inc  linker.ld  longmode_init.s  mod.rs  paging.s.inc  vga.rs
kernel/arch/x86_64/asm/: boot.s  boot_checks.inc  longmode_init.s  multiboot.s  paging.inc
